Fixing spacing on header for mobile.

--- a/themes/odyssey/stylesheets/_header.scss
+++ b/themes/odyssey/stylesheets/_header.scss
@@ -17,7 +17,7 @@ header {
 
   .logo { // the logo container.
     // width: 15%;
-    margin-bottom: 10px;
+    margin-bottom: 1.333rem;
   }
 
   .logo > .logo-big {
@@ -38,7 +38,7 @@ header {
 
     color: #19759C;
 
-    margin-bottom: 1em;
+    margin-bottom: 2rem;
   }
 
   .social-icons {
