--- a/themes/odyssey/stylesheets/navigation.scss
+++ b/themes/odyssey/stylesheets/navigation.scss
@@ -4,12 +4,15 @@ nav {
 	position: relative;
 	overflow: hidden;
 
+	margin-bottom: 1.333rem;
+
 	ul {
 		border-left: none;
 		border-right: none;
 
-		padding-left: 1.333rem;
-		padding-right: 1.333rem;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 286px;
 	}
 
 	ul.app-menu > a {
